# gaokaoapply

./: .gitignore  PDF_IMPORT_README.md  check_errors.js  index.html  package-lock.json  package.json  test_mcp.py  test_pdf.rs  test_pdf_extract.rs
.github/workflows/: release.yml
scripts/: extract_cutoffs.py  extract_shanghai_2025.py  generate_icons.mjs  scrape_gaokao.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  cargo_output.txt  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/gaokao/: shanghai_2025_cutoffs.json  shanghai_schools.json
src/data/skills/: zhangxuefeng.md
src/types/: index.ts
