[package]
name = "gaokao-apply"
version = "0.1.0"
edition = "2021"

[lib]
name = "gaokao_apply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
pdf = "0.8"
regex = "1"
encoding_rs = "0.8"
